--- a/app/src/main/res/layout/train_schedule_station_list_item.xml
+++ b/app/src/main/res/layout/train_schedule_station_list_item.xml
@@ -44,17 +44,19 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp">
 
                 <TextView
                     android:id="@+id/textViewLocationName"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"
                     android:layout_marginBottom="8dp"
                     android:text="@{trainScheduleDTO.locationFullName + ` (` + trainScheduleDTO.locationCode + `)`}"
                     android:textColor="@color/colorBlack"
                     app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.0"
@@ -89,11 +91,9 @@
                     android:id="@+id/textViewSchArrive"
                     android:layout_width="36dp"
                     android:layout_height="18dp"
-                    android:layout_marginBottom="8dp"
                     android:text="@{trainScheduleDTO.schArrival}"
                     android:textColor="@color/colorBlack"
                     android:visibility="@{trainScheduleDTO.scheduledArrival.length() > 0 ? View.VISIBLE : View.GONE}"
-                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="@+id/textViewSchArriveLabel"
                     app:layout_constraintStart_toStartOf="@+id/textViewSchArriveLabel"
                     app:layout_constraintTop_toBottomOf="@+id/textViewSchArriveLabel"
@@ -114,11 +114,9 @@
                     android:id="@+id/textViewExpArrive"
                     android:layout_width="36dp"
                     android:layout_height="18dp"
-                    android:layout_marginBottom="8dp"
                     android:text="@{trainScheduleDTO.expArrival}"
                     android:textColor="@color/colorBlack"
                     android:visibility="@{trainScheduleDTO.expectedArrival.length() > 0 ? View.VISIBLE : View.GONE}"
-                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="@+id/textViewExpArriveLabel"
                     app:layout_constraintStart_toStartOf="@+id/textViewExpArriveLabel"
                     app:layout_constraintTop_toBottomOf="@+id/textViewExpArriveLabel"
@@ -166,11 +164,9 @@
                     android:id="@+id/textViewExpDepart"
                     android:layout_width="36dp"
                     android:layout_height="18dp"
-                    android:layout_marginBottom="8dp"
                     android:text="@{trainScheduleDTO.expDepart}"
                     android:textColor="@color/colorBlack"
                     android:visibility="@{trainScheduleDTO.expectedDeparture.length() > 0 ? View.VISIBLE : View.GONE}"
-                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="@+id/textViewExpDepartLabel"
                     app:layout_constraintStart_toStartOf="@+id/textViewExpDepartLabel"
                     app:layout_constraintTop_toBottomOf="@+id/textViewExpDepartLabel"
@@ -180,11 +176,9 @@
                     android:id="@+id/textViewSchDepart"
                     android:layout_width="36dp"
                     android:layout_height="18dp"
-                    android:layout_marginBottom="8dp"
                     android:text="@{trainScheduleDTO.schDepart}"
                     android:textColor="@color/colorBlack"
                     android:visibility="@{trainScheduleDTO.scheduledDeparture.length() > 0 ? View.VISIBLE : View.GONE}"
-                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="@+id/textViewSchDepartLabel"
                     app:layout_constraintStart_toStartOf="@+id/textViewSchDepartLabel"
                     app:layout_constraintTop_toBottomOf="@+id/textViewSchDepartLabel"
