--- a/app/src/main/res/layout/train_list_item.xml
+++ b/app/src/main/res/layout/train_list_item.xml
@@ -36,6 +36,16 @@
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="A911" />
 
+            <ImageView
+                android:id="@+id/imageViewStatus"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_marginTop="8dp"
+                android:src="@{trainDTO.statusImage}"
+                app:layout_constraintEnd_toEndOf="@+id/textViewCode"
+                app:layout_constraintStart_toStartOf="@+id/textViewCode"
+                app:layout_constraintTop_toBottomOf="@+id/textViewCode"
+                tools:src="@drawable/ic_running" />
 
             <TextView
                 android:id="@+id/textViewDirection"
@@ -60,17 +70,6 @@
                 app:layout_constraintStart_toStartOf="@+id/textViewDirection"
                 app:layout_constraintTop_toBottomOf="@+id/textViewDirection"
                 tools:text="public message" />
-
-            <ImageView
-                android:id="@+id/imageView2"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_marginTop="8dp"
-                android:src="@{trainDTO.statusImage}"
-                app:layout_constraintEnd_toEndOf="@+id/textViewCode"
-                app:layout_constraintStart_toStartOf="@+id/textViewCode"
-                app:layout_constraintTop_toBottomOf="@+id/textViewCode"
-                tools:src="@drawable/ic_running" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
