--- a/app/src/main/res/layout/train_schedule_unknown_list_item.xml
+++ b/app/src/main/res/layout/train_schedule_unknown_list_item.xml
@@ -1,26 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+<androidx.cardview.widget.CardView android:layout_height="wrap_content"
+    android:layout_margin="2dp"
+    android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <data>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:background="@color/colorRed"
+        android:layout_height="1dp"
+        android:layout_width="match_parent" />
 
-        <variable
-            name="trainScheduleDTO"
-            type="com.example.irelandtrainapp.dtos.TrainScheduleDTO" />
-
-        <import type="android.view.View" />
-    </data>
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="2dp">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/colorRed" />
-
-    </androidx.cardview.widget.CardView>
-</layout>
+</androidx.cardview.widget.CardView>
