implement search functionality on stations fragment

--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -23,7 +23,7 @@
             android:id="@+id/buttonStations"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/colorAccent"
+            android:background="@color/colorPrimary"
             android:onClick="@{(v)->viewModel.onClick(v)}"
             android:text="@string/stations_label"
             android:textColor="@color/colorWhite"
@@ -36,9 +36,9 @@
             android:id="@+id/buttonTrains"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
+            android:background="@color/colorAccent"
             android:onClick="@{(v)->viewModel.onClick(v)}"
-            android:text="Trains"
+            android:text="@string/trains_label"
             android:textColor="@color/colorWhite"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
